# paramem

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  architecture.md  benchmarking.md  environment.yml  f52_architecture.md  f52_spec.md  ha_assist_pipeline.md  pyproject.toml  run_all_tests.sh  spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archive/: README.md  __init__.py  legacy_qa.py  spec.md
archive/configs/: default.yaml
archive/examples/: __init__.py  incremental_learning.py  quick_start.py  two_adapter_promotion.py
archive/experiments/: __init__.py  chained_adapter_smoke.py  direct_recall_probe.py  eval_indexed_keys.py  f4_10_indexed_consolidation.py  f4_9c_test1_capacity.py  f4_9c_test2_incremental.py  f4_9c_test3_two_adapter.py  legacy_harness.py  phase1_basic_recall.py  phase2_forgetting.py  phase3_smoke_test.py  phase4_curriculum.py  phase4_entity_replay.py  phase4_hybrid.py  phase4_indexed_keys_smoke.py  phase4_key_replay.py  phase4_keyed_json_smoke.py  phase4_rank_comparison.py  reasoning_fluency_probe.py  test10_grokking.py  test12_session_cohort_smoke.py  test13_journal_scaffold.py  test13b_recovery_probe.py  test13b_retention_curve.py  test14.py  test15_retention_multiseed.py  test2_contradictions.py  test2b_incremental_contradictions.py  test3_inference.py  test4_resume_rag.py  test4b_incremental_no_replay.py  test6_footprint.py  test7_second_persona.py  test7b_merged_personas.py  test8_large_scale.py  test9_natural_recall.py  test_early_stopping.py  test_resume_round_trip.py  test_single_key_standalone.py  (+2 more)
archive/tests/: __init__.py  test_entity_profile.py  test_entity_registry.py  test_indexed_memory.py  test_key_replay.py  test_recall_gpu.py  test_test14_round_metrics.py  test_test15_retention_multiseed.py
archive/training/: __init__.py  entity_profile.py  entity_registry.py  key_replay.py
baseline/: .gitignore  CONVENTIONS.md  Makefile  README.md  TOOLING.md  requirements.in  requirements.txt  srb.sdoc  strictdoc_config.py
baseline/chapters/: 01_purpose_scope.sdoc  02_stakeholders_context.sdoc  03_objectives.sdoc  04_system_boundary.sdoc  05_functional.sdoc  06_quality.sdoc  07_constraints.sdoc  annex_a_decisions.sdoc  annex_b_verification.sdoc  annex_c_open_questions.sdoc
baseline/grammars/: srb.sgra
configs/: default.yaml  schema.yaml  server.yaml  server.yaml.example  tools.yaml.example
configs/intents/: command.de.txt  command.en.txt  general.de.txt  general.en.txt  personal.de.txt  personal.en.txt
configs/personal_referent/: about_speaker.de.txt  about_speaker.en.txt  not_about_speaker.de.txt  not_about_speaker.en.txt
configs/prompts/: abstention_cold_start.txt  abstention_response.txt  anonymization.txt  anonymization_system.txt  entity_correction.txt  entity_correction_system.txt  extraction.txt  extraction_document.txt  extraction_procedural.txt  extraction_procedural_document.txt  extraction_system.txt  extraction_system_document.txt  graph_dedup_filter.txt  graph_dedup_filter_system.txt  graph_dedup_merge.txt  graph_normalization.txt  ha_voice.txt  merger_coexistence.txt  merger_coexistence_system.txt  merger_contradiction.txt  name_extraction.txt  name_extraction_system.txt  noise_filter.txt  pa_voice.txt  reverse_extraction.txt  reverse_extraction_system.txt  sota_enrichment.txt  sota_enrichment_system.txt  (+5 more)
examples/: incremental_learning.py  quick_start.py  two_adapter_promotion.py
experiments/: chained_adapter_smoke.py  dataset_probe.py  direct_recall_probe.py  eval_indexed_keys.py  f4_10_indexed_consolidation.py  f4_9c_test1_capacity.py  f4_9c_test2_incremental.py  f4_9c_test3_two_adapter.py  lme_graph_builder.py  lme_qa_from_triples_probe.py  phase2_forgetting.py  phase3_consolidation.py  phase3_recall_probe.py  phase3_smoke_test.py  phase4_curriculum.py  phase4_hybrid.py  phase4_indexed_keys_smoke.py  phase4_rag_baseline.py  probe_adapter.py  probe_extraction_merge_live.py  quadruple_adapter.py  reasoning_fluency_probe.py  reverse_extraction_fidelity.py  smoke_distillation.py  smoke_early_stopping.py  smoke_f51_server.py  smoke_f51_temporal.py  smoke_graph_enrichment.py  smoke_interim_rollover_enrichment.py  smoke_interim_rollover_live_gpu.py  smoke_procedural_mlp.py  smoke_quiet_hours_live_gpu.py  test10_grokking.py  test10b_diverse_rephrase.py  test11_adapter_extraction.py  test12_session_cohort_smoke.py  test13_journal_scaffold.py  test13b_recovery_probe.py  test13b_retention_curve.py  test14.py  (+27 more)
paper/: arxiv_metadata_draft.md  fig_architecture.tex  fig_pipeline.tex  main.tex  neurips_2025.sty  references.bib
paramem/: __init__.py  __main__.py  gpu_consumer.py
scripts/: compare_extraction.py  ingest_docs.py  paramem-server.service  setup-wu-lock.sh  start-server.sh  tcp-forward.py  test-ha-pipeline.sh  verify_pr1_extraction.py  win-port-forward.sh  wu-lock.ps1  wyoming-speaker-wrapper.py
tests/: __init__.py  _guard_utils.py  conftest.py  test_abstention.py  test_abstention_integration.py  test_adapter_verification.py  test_app_lifespan.py  test_background_trainer.py  test_background_trainer_quad.py  test_background_trainer_resume.py  test_calibrate_prompts_harness.py  test_cloud_agent.py  test_cloud_anonymizer_contract_gpu.py  test_cloud_only_config.py  test_config.py  test_config_promotion_guard.py  test_consolidation.py  test_consolidation_entry.py  test_consolidation_entry_interim.py  test_consolidation_entry_runners.py  test_consolidation_guard.py  test_consolidation_quad.py  test_consolidation_quad_interim.py  test_consolidation_quad_runners.py  test_consolidation_recall_early_stop.py  test_consolidation_router_ordering.py  test_curriculum.py  test_dataset.py  test_dataset_loaders.py  test_dataset_probe_commit.py  test_dataset_probe_diagnostics.py  test_dataset_probe_resume.py  test_dedup_synonym_predicates.py  test_distiller.py  test_document_chunker.py  test_early_stop.py  test_early_stop_quad.py  test_embedding_scorer.py  test_entry_format.py  test_entry_memory_probe.py  (+102 more)
(+395 files in other folders)
