[project]
name = "paramem"
version = "0.1.0"
description = "Indexed key retrieval for continual learning in personal LLM agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tobias Preusser", email = "tobias.preusser75@gmail.com"}
]
keywords = ["continual-learning", "lora", "parametric-memory", "personal-ai", "edge-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.18",
    "bitsandbytes>=0.43",
    "datasets>=2.18",
    "sentence-transformers>=2.6",
    "networkx>=3.2",
    "pydantic>=2.6",
    "rapidfuzz>=3.6",

    "wandb>=0.16",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "websockets>=13.0",
    "cryptography>=43.0",
    "pyrage>=1.3.0,<2",
    "pypdf>=4.0",
    "markdown-it-py>=3.0",
    "fasttext-numpy2-wheel>=0.9.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.80"]
google = ["google-genai>=1.0"]
all-agents = ["anthropic>=0.80", "google-genai>=1.0"]
# pyannote-audio 4.x is mandatory with torch>=2.10: 3.x uses torchaudio.AudioMetaData,
# removed in torchaudio 2.10. 4.x pulls torchcodec, whose libnvrtc/FFmpeg load failure
# at import is non-fatal (torchaudio falls back to soundfile). Supersedes the old <4 pin
# (which kept torchcodec out, but is incompatible with the torch 2.10 GPU stack).
speaker = ["pyannote-audio>=4.0"]
wyoming = ["wyoming>=1.8.0"]
stt = ["paramem[wyoming]", "faster-whisper>=1.0.0"]
tts = ["paramem[wyoming]", "piper-tts>=1.2.0", "onnxruntime>=1.17"]
tts-gpu = ["paramem[wyoming]", "piper-tts>=1.2.0", "onnxruntime-gpu>=1.17"]
# Optional higher-quality TTS engine (Kokoro-82M, Apache-2.0, CPU-capable). Covers
# en/fr/es/it/pt/hi/ja/zh (NOT German); pulls a misaki/phonemizer linguistics stack.
# Opt-in: select "kokoro" per-voice in tts.voices. Not in `voice` so base installs stay lean.
kokoro = ["paramem[wyoming]", "kokoro>=0.9.4"]
voice = ["paramem[stt,tts,speaker]"]
dev = ["pytest>=8.0", "pytest-timeout>=2.3", "ruff>=0.3"]

[project.scripts]
paramem = "paramem.cli.main:main"

[tool.setuptools.packages.find]
include = ["paramem*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# The migration smoke embeds its fictional sessions as inline JSONL strings so
# it is fully self-contained (no external fixture files). Those data lines are
# inherently longer than the 100-char limit; the script's code stays within it.
"scripts/dev/migration_maintenance_smoke.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "gpu: marks tests that require a GPU (deselect with '-m \"not gpu\"')",
    "recall: marks tests that train an adapter and probe for fact recall (~30 epochs, use --recall to run)",
    "integration: marks subprocess-based end-to-end tests that invoke the installed paramem binary (slow; skip with '-m \"not integration\"')",
]
